# SGGW_Glebokie_sieci_neuronowe_zadanie

./: .gitignore  README.md  main.py  pyproject.toml
.ai/: prd.md
src/: app.py  chunker.py  config.yaml  config_loader.py  indexer.py  rag_logic.py  stream_utils.py
src/.streamlit/: config.toml
src/data/: konstytucja_rp_z_dnia_2_04_1997.md
src/qdrant_db/: meta.json
